--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "webpack serve --env port=3000",
+    "prod": "webpack --env mode=production",
     "init": "jest --init",
     "unit": "jest --config ./jest.config.ts",
     "test": "jest"
